# ganglia-mod_aixdisk

./: README.md  configure.ac
gmond/modules/: Makefile.am
gmond/modules/aixdisk/: Makefile.am  mod_aixdisk.c
gmond/modules/conf.d/: aixdisk.conf
